# massdroid_native

./: .gitignore  MA_API_DEEP_DIVE.md  README.md  RECOMMENDATION_INVESTIGATION_2026-03-03.md  WHATSNEW.md  build-install.bat  build-install.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: aaos-aab.yml  build.yml  release.yml  stale.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/automotive/: AndroidManifest.xml
app/src/automotive/res/xml/: automotive_app_desc.xml
app/src/fdroid/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  acoustic_calibrator_jni.cpp  calibration_engine.cpp  calibration_engine.h  dsp_pipeline.cpp  dsp_pipeline.h  sendspin_output_engine.cpp  sendspin_output_engine.h  sendspin_output_jni.cpp
app/src/play/: AndroidManifest.xml
atv/: build.gradle.kts
atv/src/main/: AndroidManifest.xml
auto/: build.gradle.kts
auto/src/main/: AndroidManifest.xml
automotive/: build.gradle.kts
automotive/src/main/: AndroidManifest.xml
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  acoustic_calibrator_jni.cpp  calibration_engine.cpp  calibration_engine.h  dsp_pipeline.cpp  dsp_pipeline.h  sendspin_output_engine.cpp  sendspin_output_engine.h  sendspin_output_jni.cpp  tone_generator.cpp  tone_generator.h
docs/: README.md  android-auto.md  configuration.md  follow-me.md  permissions.md  recommendations.md  sendspin.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
scripts/: seek-monitor.sh
(+302 files in other folders)
